@@ -1,5 +1,6 @@
 
 VPATH=..
-CC=/usr/local/mingw-w64/bin/x86_64-pc-mingw32-gcc
+#CC=/usr/local/mingw-w64/bin/x86_64-pc-mingw32-gcc
+CC=/usr/local/X64/cross/bin/x86_64-w64-mingw32-gcc
 include ../Makefile
 
